--- a/notebook files/KModes Clustering.ipynb
+++ b/notebook files/KModes Clustering.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "611fc722",
+   "execution_count": 31,
+   "id": "9035c8c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e39aa969",
+   "execution_count": 36,
+   "id": "1c9cf50c",
    "metadata": {},
    "outputs": [
     {
@@ -172,20 +172,143 @@
        "4             0             0              40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#adult dataset from UCI\n",
     "data = pd.read_csv('../data/adult.csv')\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "3cb45e34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#drop some continuous values columns that are not okay with KModes\n",
+    "data = data.drop(['fnlwgt','education-num', 'capital-gain','country','capital-loss'],axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fcb72484",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>38</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>53</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>37</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>49</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>52</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>31</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>42</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  hours-per-week\n",
+       "0   39              40\n",
+       "1   50              13\n",
+       "2   38              40\n",
+       "3   53              40\n",
+       "4   28              40\n",
+       "5   37              40\n",
+       "6   49              16\n",
+       "7   52              45\n",
+       "8   31              50\n",
+       "9   42              40"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#for age and hours-per-week, we will group them \n",
+    "#into two or three groups to become categorical column\n",
+    "data[['age','hours-per-week']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "69d7e528",
+   "id": "9ae8b1f0",
    "metadata": {},
    "outputs": [],
    "source": []
