--- a/notebook files/KModes Clustering.ipynb
+++ b/notebook files/KModes Clustering.ipynb
@@ -2,18 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "9035c8c2",
+   "execution_count": 1,
+   "id": "d751f3db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "1c9cf50c",
+   "execution_count": 2,
+   "id": "e9eab8cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from kmodes.kmodes import KModes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed76ebff",
+   "metadata": {},
+   "source": [
+    "# Data preparing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "102507e1",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +194,7 @@
        "4             0             0              40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "3cb45e34",
+   "execution_count": 25,
+   "id": "8e4ad1cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,8 +218,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "fcb72484",
+   "execution_count": 26,
+   "id": "837a80bd",
    "metadata": {},
    "outputs": [
     {
@@ -241,41 +263,6 @@
        "      <td>38</td>\n",
        "      <td>40</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>53</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>28</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>37</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>49</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>52</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>31</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>42</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -284,17 +271,10 @@
        "   age  hours-per-week\n",
        "0   39              40\n",
        "1   50              13\n",
-       "2   38              40\n",
-       "3   53              40\n",
-       "4   28              40\n",
-       "5   37              40\n",
-       "6   49              16\n",
-       "7   52              45\n",
-       "8   31              50\n",
-       "9   42              40"
+       "2   38              40"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,13 +282,321 @@
    "source": [
     "#for age and hours-per-week, we will group them \n",
     "#into two or three groups to become categorical column\n",
-    "data[['age','hours-per-week']].head(10)"
+    "data[['age','hours-per-week']].head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3bb050bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_age_group(value):\n",
+    "    \n",
+    "    if value == 0:\n",
+    "        return 'Unknown'\n",
+    "    elif value < 20:\n",
+    "        return '<20'\n",
+    "    elif 20 <= value <= 40:\n",
+    "        return '20 - 40'\n",
+    "    elif 40 <= value <= 60:\n",
+    "        return '40 - 60'\n",
+    "    elif value > 60:\n",
+    "        return '60+'\n",
+    "    else:\n",
+    "        return 'Unknown'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "dd98d983",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_hpw_group(value): #hours-per-week\n",
+    "    \n",
+    "    if value < 20:\n",
+    "        return '<20'\n",
+    "    elif 20 <= value <= 40:\n",
+    "        return '20 - 40'\n",
+    "    elif 40 <= value <= 60:\n",
+    "        return '40 - 60'\n",
+    "    elif value > 60:\n",
+    "        return '60+'\n",
+    "    else:\n",
+    "        return 'Unknown'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ef53cde6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#apply above function to 'age' column to get categorical column\n",
+    "data['age_group'] = data['age'].apply(get_age_group)\n",
+    "data = data.drop(['age'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "18ba6498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#apply above function to 'hours-per-week' column to get categorical column\n",
+    "data['hpw_group'] = data['hours-per-week'].apply(get_hpw_group)\n",
+    "data = data.drop(['hours-per-week'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "9a44bcd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>education</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>age_group</th>\n",
+       "      <th>hpw_group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>State-gov</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>20 - 40</td>\n",
+       "      <td>20 - 40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Self-emp-not-inc</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>40 - 60</td>\n",
+       "      <td>&lt;20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>Handlers-cleaners</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>20 - 40</td>\n",
+       "      <td>20 - 40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Private</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Handlers-cleaners</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>40 - 60</td>\n",
+       "      <td>20 - 40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Private</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>20 - 40</td>\n",
+       "      <td>20 - 40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32556</th>\n",
+       "      <td>Private</td>\n",
+       "      <td>Assoc-acdm</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Tech-support</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>20 - 40</td>\n",
+       "      <td>20 - 40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32557</th>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>&gt;50K</td>\n",
+       "      <td>20 - 40</td>\n",
+       "      <td>20 - 40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32558</th>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Widowed</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Unmarried</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>40 - 60</td>\n",
+       "      <td>20 - 40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32559</th>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>20 - 40</td>\n",
+       "      <td>20 - 40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32560</th>\n",
+       "      <td>Self-emp-inc</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>&gt;50K</td>\n",
+       "      <td>40 - 60</td>\n",
+       "      <td>20 - 40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32561 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               workclass    education       marital-status  \\\n",
+       "0              State-gov    Bachelors        Never-married   \n",
+       "1       Self-emp-not-inc    Bachelors   Married-civ-spouse   \n",
+       "2                Private      HS-grad             Divorced   \n",
+       "3                Private         11th   Married-civ-spouse   \n",
+       "4                Private    Bachelors   Married-civ-spouse   \n",
+       "...                  ...          ...                  ...   \n",
+       "32556            Private   Assoc-acdm   Married-civ-spouse   \n",
+       "32557            Private      HS-grad   Married-civ-spouse   \n",
+       "32558            Private      HS-grad              Widowed   \n",
+       "32559            Private      HS-grad        Never-married   \n",
+       "32560       Self-emp-inc      HS-grad   Married-civ-spouse   \n",
+       "\n",
+       "               occupation    relationship    race      sex  salary age_group  \\\n",
+       "0            Adm-clerical   Not-in-family   White     Male   <=50K   20 - 40   \n",
+       "1         Exec-managerial         Husband   White     Male   <=50K   40 - 60   \n",
+       "2       Handlers-cleaners   Not-in-family   White     Male   <=50K   20 - 40   \n",
+       "3       Handlers-cleaners         Husband   Black     Male   <=50K   40 - 60   \n",
+       "4          Prof-specialty            Wife   Black   Female   <=50K   20 - 40   \n",
+       "...                   ...             ...     ...      ...     ...       ...   \n",
+       "32556        Tech-support            Wife   White   Female   <=50K   20 - 40   \n",
+       "32557   Machine-op-inspct         Husband   White     Male    >50K   20 - 40   \n",
+       "32558        Adm-clerical       Unmarried   White   Female   <=50K   40 - 60   \n",
+       "32559        Adm-clerical       Own-child   White     Male   <=50K   20 - 40   \n",
+       "32560     Exec-managerial            Wife   White   Female    >50K   40 - 60   \n",
+       "\n",
+       "      hpw_group  \n",
+       "0       20 - 40  \n",
+       "1           <20  \n",
+       "2       20 - 40  \n",
+       "3       20 - 40  \n",
+       "4       20 - 40  \n",
+       "...         ...  \n",
+       "32556   20 - 40  \n",
+       "32557   20 - 40  \n",
+       "32558   20 - 40  \n",
+       "32559   20 - 40  \n",
+       "32560   20 - 40  \n",
+       "\n",
+       "[32561 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ae8b1f0",
+   "id": "2869732e",
    "metadata": {},
    "outputs": [],
    "source": []
