--- a/notebook files/KModes Clustering.ipynb
+++ b/notebook files/KModes Clustering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d751f3db",
+   "id": "8979b313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e9eab8cf",
+   "id": "6a140465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed76ebff",
+   "id": "077dae4a",
    "metadata": {},
    "source": [
-    "# Data preparing"
+    "# Data Preparing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "102507e1",
+   "id": "5700e80b",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8e4ad1cb",
+   "id": "6e0ebd55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "837a80bd",
+   "id": "adda40e5",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3bb050bf",
+   "id": "a8782d08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "dd98d983",
+   "id": "767fdb4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ef53cde6",
+   "id": "8d701275",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "18ba6498",
+   "id": "45036000",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,8 +355,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "9a44bcd3",
+   "execution_count": 51,
+   "id": "913180c7",
    "metadata": {},
    "outputs": [
     {
@@ -458,145 +458,335 @@
        "      <td>20 - 40</td>\n",
        "      <td>20 - 40</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32556</th>\n",
-       "      <td>Private</td>\n",
-       "      <td>Assoc-acdm</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Tech-support</td>\n",
-       "      <td>Wife</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "      <td>20 - 40</td>\n",
-       "      <td>20 - 40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32557</th>\n",
-       "      <td>Private</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Machine-op-inspct</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>&gt;50K</td>\n",
-       "      <td>20 - 40</td>\n",
-       "      <td>20 - 40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32558</th>\n",
-       "      <td>Private</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>Widowed</td>\n",
-       "      <td>Adm-clerical</td>\n",
-       "      <td>Unmarried</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "      <td>40 - 60</td>\n",
-       "      <td>20 - 40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32559</th>\n",
-       "      <td>Private</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>Never-married</td>\n",
-       "      <td>Adm-clerical</td>\n",
-       "      <td>Own-child</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "      <td>20 - 40</td>\n",
-       "      <td>20 - 40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32560</th>\n",
-       "      <td>Self-emp-inc</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Exec-managerial</td>\n",
-       "      <td>Wife</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>&gt;50K</td>\n",
-       "      <td>40 - 60</td>\n",
-       "      <td>20 - 40</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>32561 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               workclass    education       marital-status  \\\n",
-       "0              State-gov    Bachelors        Never-married   \n",
-       "1       Self-emp-not-inc    Bachelors   Married-civ-spouse   \n",
-       "2                Private      HS-grad             Divorced   \n",
-       "3                Private         11th   Married-civ-spouse   \n",
-       "4                Private    Bachelors   Married-civ-spouse   \n",
-       "...                  ...          ...                  ...   \n",
-       "32556            Private   Assoc-acdm   Married-civ-spouse   \n",
-       "32557            Private      HS-grad   Married-civ-spouse   \n",
-       "32558            Private      HS-grad              Widowed   \n",
-       "32559            Private      HS-grad        Never-married   \n",
-       "32560       Self-emp-inc      HS-grad   Married-civ-spouse   \n",
+       "           workclass   education       marital-status          occupation  \\\n",
+       "0          State-gov   Bachelors        Never-married        Adm-clerical   \n",
+       "1   Self-emp-not-inc   Bachelors   Married-civ-spouse     Exec-managerial   \n",
+       "2            Private     HS-grad             Divorced   Handlers-cleaners   \n",
+       "3            Private        11th   Married-civ-spouse   Handlers-cleaners   \n",
+       "4            Private   Bachelors   Married-civ-spouse      Prof-specialty   \n",
        "\n",
-       "               occupation    relationship    race      sex  salary age_group  \\\n",
-       "0            Adm-clerical   Not-in-family   White     Male   <=50K   20 - 40   \n",
-       "1         Exec-managerial         Husband   White     Male   <=50K   40 - 60   \n",
-       "2       Handlers-cleaners   Not-in-family   White     Male   <=50K   20 - 40   \n",
-       "3       Handlers-cleaners         Husband   Black     Male   <=50K   40 - 60   \n",
-       "4          Prof-specialty            Wife   Black   Female   <=50K   20 - 40   \n",
-       "...                   ...             ...     ...      ...     ...       ...   \n",
-       "32556        Tech-support            Wife   White   Female   <=50K   20 - 40   \n",
-       "32557   Machine-op-inspct         Husband   White     Male    >50K   20 - 40   \n",
-       "32558        Adm-clerical       Unmarried   White   Female   <=50K   40 - 60   \n",
-       "32559        Adm-clerical       Own-child   White     Male   <=50K   20 - 40   \n",
-       "32560     Exec-managerial            Wife   White   Female    >50K   40 - 60   \n",
-       "\n",
-       "      hpw_group  \n",
-       "0       20 - 40  \n",
-       "1           <20  \n",
-       "2       20 - 40  \n",
-       "3       20 - 40  \n",
-       "4       20 - 40  \n",
-       "...         ...  \n",
-       "32556   20 - 40  \n",
-       "32557   20 - 40  \n",
-       "32558   20 - 40  \n",
-       "32559   20 - 40  \n",
-       "32560   20 - 40  \n",
-       "\n",
-       "[32561 rows x 10 columns]"
+       "     relationship    race      sex  salary age_group hpw_group  \n",
+       "0   Not-in-family   White     Male   <=50K   20 - 40   20 - 40  \n",
+       "1         Husband   White     Male   <=50K   40 - 60       <20  \n",
+       "2   Not-in-family   White     Male   <=50K   20 - 40   20 - 40  \n",
+       "3         Husband   Black     Male   <=50K   40 - 60   20 - 40  \n",
+       "4            Wife   Black   Female   <=50K   20 - 40   20 - 40  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b96d5399",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32561, 70)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#now I got all caterogical columns\n",
+    "#Apply one hot encoding for these columns\n",
+    "\n",
+    "user_data = pd.get_dummies(data, prefix_sep='__', columns = data.columns)\n",
+    "user_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2c7aed16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>workclass__ ?</th>\n",
+       "      <th>workclass__ Federal-gov</th>\n",
+       "      <th>workclass__ Local-gov</th>\n",
+       "      <th>workclass__ Never-worked</th>\n",
+       "      <th>workclass__ Private</th>\n",
+       "      <th>workclass__ Self-emp-inc</th>\n",
+       "      <th>workclass__ Self-emp-not-inc</th>\n",
+       "      <th>workclass__ State-gov</th>\n",
+       "      <th>workclass__ Without-pay</th>\n",
+       "      <th>education__ 10th</th>\n",
+       "      <th>...</th>\n",
+       "      <th>salary__ &lt;=50K</th>\n",
+       "      <th>salary__ &gt;50K</th>\n",
+       "      <th>age_group__20 - 40</th>\n",
+       "      <th>age_group__40 - 60</th>\n",
+       "      <th>age_group__60+</th>\n",
+       "      <th>age_group__&lt;20</th>\n",
+       "      <th>hpw_group__20 - 40</th>\n",
+       "      <th>hpw_group__40 - 60</th>\n",
+       "      <th>hpw_group__60+</th>\n",
+       "      <th>hpw_group__&lt;20</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 70 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   workclass__ ?  workclass__ Federal-gov  workclass__ Local-gov  \\\n",
+       "0              0                        0                      0   \n",
+       "1              0                        0                      0   \n",
+       "2              0                        0                      0   \n",
+       "3              0                        0                      0   \n",
+       "4              0                        0                      0   \n",
+       "\n",
+       "   workclass__ Never-worked  workclass__ Private  workclass__ Self-emp-inc  \\\n",
+       "0                         0                    0                         0   \n",
+       "1                         0                    0                         0   \n",
+       "2                         0                    1                         0   \n",
+       "3                         0                    1                         0   \n",
+       "4                         0                    1                         0   \n",
+       "\n",
+       "   workclass__ Self-emp-not-inc  workclass__ State-gov  \\\n",
+       "0                             0                      1   \n",
+       "1                             1                      0   \n",
+       "2                             0                      0   \n",
+       "3                             0                      0   \n",
+       "4                             0                      0   \n",
+       "\n",
+       "   workclass__ Without-pay  education__ 10th  ...  salary__ <=50K  \\\n",
+       "0                        0                 0  ...               1   \n",
+       "1                        0                 0  ...               1   \n",
+       "2                        0                 0  ...               1   \n",
+       "3                        0                 0  ...               1   \n",
+       "4                        0                 0  ...               1   \n",
+       "\n",
+       "   salary__ >50K  age_group__20 - 40  age_group__40 - 60  age_group__60+  \\\n",
+       "0              0                   1                   0               0   \n",
+       "1              0                   0                   1               0   \n",
+       "2              0                   1                   0               0   \n",
+       "3              0                   0                   1               0   \n",
+       "4              0                   1                   0               0   \n",
+       "\n",
+       "   age_group__<20  hpw_group__20 - 40  hpw_group__40 - 60  hpw_group__60+  \\\n",
+       "0               0                   1                   0               0   \n",
+       "1               0                   0                   0               0   \n",
+       "2               0                   1                   0               0   \n",
+       "3               0                   1                   0               0   \n",
+       "4               0                   1                   0               0   \n",
+       "\n",
+       "   hpw_group__<20  \n",
+       "0               0  \n",
+       "1               1  \n",
+       "2               0  \n",
+       "3               0  \n",
+       "4               0  \n",
+       "\n",
+       "[5 rows x 70 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#it turned into 70 columns from 10 columns\n",
+    "user_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a51ee42d",
+   "metadata": {},
+   "source": [
+    "####"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6892ea0",
+   "metadata": {},
+   "source": [
+    "# Model training with KModes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2869732e",
+   "id": "cfd5ed69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c39521be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b1e793b",
    "metadata": {},
    "outputs": [],
    "source": []
