--- a/notebook files/KModes Clustering.ipynb
+++ b/notebook files/KModes Clustering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8979b313",
+   "id": "3ba5ee9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6a140465",
+   "id": "d6dd47ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077dae4a",
+   "id": "1bc6a20f",
    "metadata": {},
    "source": [
     "# Data Preparing"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5700e80b",
+   "id": "f46071ae",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6e0ebd55",
+   "id": "b4accf8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "adda40e5",
+   "id": "374b68e6",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a8782d08",
+   "id": "00ee2461",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "767fdb4f",
+   "id": "0af23bb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8d701275",
+   "id": "eec8477d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "45036000",
+   "id": "39c307b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "913180c7",
+   "id": "c3d985fb",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "b96d5399",
+   "id": "969c389e",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2c7aed16",
+   "id": "0538908a",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a51ee42d",
+   "id": "c7100f0b",
    "metadata": {},
    "source": [
     "####"
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6892ea0",
+   "id": "724deb16",
    "metadata": {},
    "source": [
     "# Model training with KModes"
@@ -770,7 +770,139 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfd5ed69",
+   "id": "59532a72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 1, iteration: 1/100, moves: 0, cost: 249458.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 2, iteration: 1/100, moves: 0, cost: 249458.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 3, iteration: 1/100, moves: 0, cost: 249458.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 4, iteration: 1/100, moves: 0, cost: 249458.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 5, iteration: 1/100, moves: 0, cost: 249458.0\n",
+      "Best run was number 1\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 1, iteration: 1/100, moves: 5038, cost: 211845.0\n",
+      "Run 1, iteration: 2/100, moves: 1152, cost: 210671.0\n",
+      "Run 1, iteration: 3/100, moves: 552, cost: 210671.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 2, iteration: 1/100, moves: 5493, cost: 215304.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 3, iteration: 1/100, moves: 1956, cost: 218474.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 4, iteration: 1/100, moves: 6038, cost: 210671.0\n",
+      "Run 4, iteration: 2/100, moves: 2118, cost: 210671.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 5, iteration: 1/100, moves: 9772, cost: 219243.0\n",
+      "Run 5, iteration: 2/100, moves: 770, cost: 219243.0\n",
+      "Best run was number 1\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 1, iteration: 1/100, moves: 12314, cost: 215419.0\n",
+      "Run 1, iteration: 2/100, moves: 5168, cost: 208576.0\n",
+      "Run 1, iteration: 3/100, moves: 6538, cost: 206228.0\n",
+      "Run 1, iteration: 4/100, moves: 1383, cost: 206186.0\n",
+      "Run 1, iteration: 5/100, moves: 271, cost: 206186.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 2, iteration: 1/100, moves: 5175, cost: 214323.0\n",
+      "Run 2, iteration: 2/100, moves: 1578, cost: 214323.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 3, iteration: 1/100, moves: 3389, cost: 205369.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 4, iteration: 1/100, moves: 10293, cost: 201094.0\n",
+      "Run 4, iteration: 2/100, moves: 3953, cost: 197939.0\n",
+      "Run 4, iteration: 3/100, moves: 1043, cost: 197939.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 5, iteration: 1/100, moves: 8405, cost: 195405.0\n",
+      "Run 5, iteration: 2/100, moves: 934, cost: 195405.0\n",
+      "Best run was number 5\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 1, iteration: 1/100, moves: 5592, cost: 195999.0\n",
+      "Run 1, iteration: 2/100, moves: 319, cost: 195999.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 2, iteration: 1/100, moves: 14669, cost: 184148.0\n",
+      "Run 2, iteration: 2/100, moves: 8454, cost: 183145.0\n",
+      "Run 2, iteration: 3/100, moves: 1028, cost: 183145.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 3, iteration: 1/100, moves: 8530, cost: 184336.0\n",
+      "Run 3, iteration: 2/100, moves: 3028, cost: 184336.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 4, iteration: 1/100, moves: 7730, cost: 186152.0\n",
+      "Run 4, iteration: 2/100, moves: 5650, cost: 186152.0\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 5, iteration: 1/100, moves: 6488, cost: 192358.0\n",
+      "Run 5, iteration: 2/100, moves: 364, cost: 192358.0\n",
+      "Best run was number 2\n",
+      "Init: initializing centroids\n",
+      "Init: initializing clusters\n",
+      "Starting iterations...\n",
+      "Run 1, iteration: 1/100, moves: 15046, cost: 179754.0\n",
+      "Run 1, iteration: 2/100, moves: 3177, cost: 174693.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cost = []\n",
+    "K = range(1,10)\n",
+    "\n",
+    "#I set n_init 5 so it will run 5 times for one loop\n",
+    "#and init as 'random' so it will choose the observations at random from data\n",
+    "for num_clusters in list(K):\n",
+    "    kmode = KModes(n_clusters=num_clusters, init = \"random\", n_init = 5, verbose=1)\n",
+    "    kmode.fit_predict(user_data)\n",
+    "    cost.append(kmode.cost_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e55ffe4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -778,15 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c39521be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b1e793b",
+   "id": "898fba61",
    "metadata": {},
    "outputs": [],
    "source": []
